Bug 507005 - Folder/file selection outline look blured
Summary: Folder/file selection outline look blured
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 25.07.80
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Akseli Lahtinen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-13 20:52 UTC by The Entropyst
Modified: 2025-08-19 08:51 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The blured outline with the pixel grid (42.34 KB, image/png)
2025-07-13 20:52 UTC, The Entropyst
Details

Note You need to log in before you can comment on or make changes to this bug.
Description The Entropyst 2025-07-13 20:52:49 UTC
Created attachment 183209 [details]
The blured outline with the pixel grid

SUMMARY
If you select a folder/file on the main view, the outline look blured

STEPS TO REPRODUCE
1. Select a folder or an icon

OBSERVED RESULT
The outline have 2-3 pixel thickness but not with the same color making it blured 

EXPECTED RESULT
The outline should be crisp

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.4.2
KDE Frameworks Version: 6.16.0
Dolphin version: 25.07.80
Qt Version: 6.10.0
Kernel Version: 6.15.6-arch1-1 (64-bit)
Graphics Platform: Wayland
Comment 1 Roke Julian Lockhart Beedell 2025-08-16 21:00:12 UTC
(In reply to the.entropyst from comment #0)

Discussed at https://discuss.kde.org/t/i-dont-believe-that-the-new-dolphin-highlight-is-an-improvement/38590/9?u=rokejulianlockhart, if of any use. This affects all view modes, but not outside them.
Comment 2 Akseli Lahtinen 2025-08-17 12:24:29 UTC
Do you use fractional scaling?

But yes I agree it's bit blurry. Need to look into it again.
Comment 3 Roke Julian Lockhart Beedell 2025-08-17 12:36:10 UTC
(In reply to Akseli Lahtinen from comment #2)

This reproduces, for me, on whatever display the Framework 16 utilises, at 145% (fractional), but also at 100% on my AOC Q3279WG5B. Consequently, no: it's not caused by that.
Comment 4 Akseli Lahtinen 2025-08-18 11:58:56 UTC
Working on it here: https://invent.kde.org/system/dolphin/-/merge_requests/1023
Comment 5 Akseli Lahtinen 2025-08-19 08:51:37 UTC
Git commit 361a65d3fd3f3da217748b845875d4de3464e9a5 by Akseli Lahtinen.
Committed on 18/08/2025 at 16:20.
Pushed by akselmo into branch 'master'.

KItemListWidget: Use strokePath instead of drawPath

StrokePath gives the focus frame a less blurry look

Since the path is bit thinner now, we need to adjust the
alpha level to make it easier to see.

This is especially visible in dark themes.

M  +5    -5    src/kitemviews/kitemlistwidget.cpp

https://invent.kde.org/system/dolphin/-/commit/361a65d3fd3f3da217748b845875d4de3464e9a5