KItemListWidget: Use strokePath instead of drawPath

StrokePath gives the focus frame a less blurry look

Since the path is bit thinner now, we need to adjust the
alpha level to make it easier to see.

This is especially visible in dark themes.

BUG: 507005